# Cech-scale

./: .gitignore  CMakeLists.txt  Makefile  README.md  WEB-Cech.scale.cpp
header/: auxiliary_functions.h  cech_scale.h  circle_circle_intersection.h  point.h
src/: auxiliary_functions.cpp  cech_scale.cpp  circle_circle_intersection.cpp  main.cpp
textfiles/: Cech_scale.txt  Disks-system.txt  cech_results.txt
